# jabberjaw

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
jabberjaw/: __init__.py  mkt.py
jabberjaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jabberjaw/data_manager/: __init__.py  data_archiver.py  data_extractor.py  data_loader.py  data_reader.py  marketiser.py  mkt_data_manager.py
jabberjaw/equity/: equity_index_extractor.py  equity_index_marketiser.py  equity_stock_extractor.py  equity_stock_loader.py  equity_stock_marketiser.py  equity_stock_viewer.py
jabberjaw/fx/: fx_data_loader.py
jabberjaw/instruments/equity/: single_name.py
jabberjaw/instruments/ir/: commercial_paper.py  fra.py  irindex.py  t_bill.py  tsy_cm.py  zcbond.py
jabberjaw/ir/: base_curve.py  ir_curve.py  ir_data_loader.py  segments.py
jabberjaw/ir/curve_construction/: curve_fitter.py
jabberjaw/marketsier/: equity_index_marketiser.py  equity_stock_marketiser.py  fx_pair_marktiser.py  ir_usd_marketiser.py
jabberjaw/mkt_utils/: data_manager.py  data_manager_parquet.py  mkt.py  mkt_classes.py  mkt_data_loader.py  yahoo_data_manager.py
jabberjaw/plootool/: equity_stock_viewer.py
jabberjaw/quant_tools/: bla.py  ir_curve.py  vol_kit.py
jabberjaw/trade_tools/: future_hedge.py
jabberjaw/tsdb_utils/: equity_index_cfg_update.py  equity_stock_cfg_update.py  fx_spot_cfg_update.py  ir_usd_cfg_update.py  mkt_coord_defaults.py
jabberjaw/utils/: calendars.py  helper_classes.py  instrument.py  ir_calculators.py  mkt.py  mkt_classes.py  portfolio.py  strategy.py
tests/: bla.py  conftest.py  test_calendars.py  test_data_archiver.py  test_data_loader.py  test_jabberjaw.py  test_mkt_classes.py
