[tool.poetry]
name = "JabberJaw"
version = "0.1.0"
description = ""
authors = ["imry <imry.rosnebaum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
pandas = "^1.2.0"
pandas-datareader = "^0.9.0"
matplotlib = "^3.3.3"
pyaml = "^20.4.0"
bs4 = "^0.0.1"
dpath = "^2.0.1"
tables = "^3.6.1"
mpl-finance = "^0.10.1"
mplfinance = "^0.12.7-alpha.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
