[tool.poetry]
name = "JabberJaw"
version = "0.1.0"
description = ""
authors = ["imry <imry.rosnebaum@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = ">1.19.1"
pandas = "^1.3.0"
pandas-datareader = "^0.10.0"
matplotlib = "^3.3.3"
pyaml = "^20.4.0"
bs4 = "^0.0.1"
dpath = "^2.0.1"
mpl-finance = "^0.10.1"
mplfinance = "^0.12.7-alpha.5"
pyarrow = "^6.0.0"
julia = "^0.5.6"
numexpr = "^2.8.0"
h5py = "^3.6.0"
holidays = "^0.12"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
