[project]
name = "jabberjaw"
version = "0.1.0"
description = ""
authors = [
    {name = "imry", email = "imry.rosnebaum@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.19.1",
    "polars>=0.20.0",
    "yfinance>=0.2.0",
    "fredapi>=0.5.0",
    "matplotlib>=3.3.3",
    "pyaml>=20.4.0",
    "bs4>=0.0.1",
    "dpath>=2.0.1",
    "mpl-finance>=0.10.1",
    "mplfinance>=0.12.7a5",
    "pyarrow>=6.0.0",
    "julia>=0.5.6",
    "numexpr>=2.8.0",
    "h5py>=3.6.0",
    "holidays>=0.12",
    "scipy>=1.8.0",
    "apache-airflow>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "autopep8>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]                # line length handled by formatter

[tool.coverage.run]
source = ["jabberjaw"]
omit = ["*/tests/*", "*/__main__*"]
